tests/reference/asr-external1-e1307b8.stderr
semantic error: Type mismatch in argument 1
 --> tests/errors/external1.f90:4:3
  |
4 |   call f(a, b, c)
  |   ^^^^^^^^^^^^^^^ 
